@@ -22,43 +22,3 @@
 #include <ags/libags.h>
 #include <ags/libags-audio.h>
 #include <ags/libags-gui.h>
-
-void
-ags_panel_input_line_notify_data_object_callback(GObject *audio_connection,
-						 GParamSpec *pspec,
-						 AgsPanelInputLine *panel_input_line)
-{
-  gchar *str;
-
-  //FIXME:JK: uncomment if thread-safe
-#if 0
-  str = g_strdup_printf("%s:%s[%d]",
-			G_OBJECT_TYPE_NAME(AGS_CONNECTION(audio_connection)->data_object),
-			ags_soundcard_get_device(AGS_SOUNDCARD(AGS_CONNECTION(audio_connection)->data_object)),
-			AGS_AUDIO_CONNECTION(audio_connection)->mapped_line + 1);
-  gtk_label_set_label(panel_input_line->soundcard_connection,
-		      str);
-
-  g_free(str);
-#endif
-}
-
-void
-ags_panel_input_line_notify_mapped_line_callback(GObject *audio_connection,
-						 GParamSpec *pspec,
-						 AgsPanelInputLine *panel_input_line)
-{
-  gchar *str;
-  
-  //FIXME:JK: uncomment if thread-safe
-#if 0
-  str = g_strdup_printf("%s:%s[%d]",
-			G_OBJECT_TYPE_NAME(AGS_CONNECTION(audio_connection)->data_object),
-			ags_soundcard_get_device(AGS_SOUNDCARD(AGS_CONNECTION(audio_connection)->data_object)),
-			AGS_AUDIO_CONNECTION(audio_connection)->mapped_line + 1);
-  gtk_label_set_label(panel_input_line->soundcard_connection,
-		      str);
-
-  g_free(str);
-#endif
-}
